# UIMate

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  use-local-hooks.sh
.github/workflows/: pylint.yml
src/: data-ingestion.py  data_loader.py  eval.py  logger.py  model_factory.py  train-model.py  train.py
src/train/: loss.py
