[tool.poetry]
name = "uimate"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.18.0"
opencv-python = "^4.10.0.84"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
